--- a/views/reviewNew.pug
+++ b/views/reviewNew.pug
@@ -5,7 +5,7 @@ html
     title= title
   body
     block content
-    form(style='visibility:hidden;',action="http://review.rnd.meizu.com/login/%23%2Fq%2Fstatus%3Aopen" method="post")
+    form(style='visibility:hidden;',action="http://review.rnd.meizu.com/login/#/dashboard/self" method="post")
       input(type="text",name="username")
       input(type="text",name="password")
       input(type="submit",id="submitBtn")
