--- a/views/manage.html
+++ b/views/manage.html
@@ -35,7 +35,7 @@
       </el-form-item>
       <el-form-item label="通知邮件">
         <el-select v-model="form.email" placeholder="请选择邮箱">
-          <el-option label="空" value=""></el-option>
+          <el-option label="不发邮件" value=""></el-option>
           <el-option v-for="(value, key) in emails" :label="key" :value="value"></el-option>
         </el-select>
       </el-form-item>
@@ -156,8 +156,8 @@
             username: 'guangjie',
             password: '',
             date1: this.format(new Date(Date.now() + 864e5), 'yyyy-MM-dd'),
-            category: ['reviewOld', 'reviewNew'],
-            email: 'guangjie@meizu.com'
+            category: ['reviewOld', 'reviewNew', 'zops'],
+            email: ''
           }
         }
       },
