--- a/views/schedule.html
+++ b/views/schedule.html
@@ -138,7 +138,7 @@
           visible: false,
           form: {
             username: 'guangjie',
-            password: 'Today_oh02',
+            password: '',
             email: ''
           }
         }
